<resources>
    <string name="app_name">Car Control</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_register">Register</string>
    <string name="or">--or--</string>
    <string name="title_activity_main">Main Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_navigation">Navigation</string>
    <string name="nav_media">Media</string>
    <string name="nav_ready_car">Ready Car</string>
    <string name="nav_driving_score">Driving Score</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_social">Social</string>
    <string name="nav_share">Share</string>
    <string name="title_activity_maps">Map</string>

    <string name="song1">Believer - Imagine Dragons</string>
    <string name="song2">Talk Dirty - Jason Derulo</string>
    <string name="song3">Turn Down for What - DJ Snake</string>
    <string name="song4">Shape of You - Ed Sheeran</string>
    <string name="song5">Starboy - The Weeknd</string>
    <string name="song6">One Dance - Drake</string>
    <string name="song7">Help! - The Beatles</string>
    <string name="song8">Thunderstruck - AC/DC</string>
    <string name="song9">Cold - Maroon 5</string>
    <string name="song10">Green Light - Lorde</string>
    <string name="song11">Solo Dance - Martin Jensen</string>
    <string name="song12">Wonderland - Taylor Swift</string>
    <string name="song13">Tunnel Vision - Kodak Black</string>
    <string name="song14">Water Under The Bridge - Adele</string>
    <string name="song15">My Way - Calvin Harris</string>
    <string name="song16">CoCo - O.T. Genasis</string>
    <string name="nav_convoy">Manage Convoy</string>
</resources>
