<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_navigation"
                android:icon="@drawable/ic_menu_navigation"
                android:title="@string/nav_navigation"/>
        <item
                android:id="@+id/nav_media"
                android:icon="@drawable/ic_menu_media"
                android:title="@string/nav_media"/>
        <item
                android:id="@+id/nav_ready_car"
                android:title="@string/nav_ready_car"/>
        <item
                android:id="@+id/nav_driving_score"
                android:title="@string/nav_driving_score"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_settings"/>
    </group>

    <item android:title="@string/nav_social">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_share"/>
        </menu>
    </item>

</menu>
