<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_music_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.ateam.carcontrol.MusicMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/thunderstruck"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="20dp"
                android:text="Current Song: Thunderstruck\n\nNext up: Wonderland"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song1"
                        android:gravity="top"
                        android:textSize="20dp"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button1"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song2"
                        android:gravity="top"
                        android:textSize="20dp"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button2"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song3"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button3"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song4"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button4"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song5"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button5"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song6"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button6"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song7"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button7"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song8"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button8"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song9"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button9"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song10"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button10"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song11"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button11"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song12"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button12"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song13"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button13"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song14"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button14"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song15"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button15"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/song16"
                        android:textSize="20dp"
                        android:gravity="top"/>
                    <Button
                        android:text="+"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:id="@+id/button16"
                        android:textSize="20dp"
                        android:onClick="click_one"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="299dp" />

</RelativeLayout>

